Bug 303860 - Shortcut assigned to Presence Applet no longer opens contact list
Summary: Shortcut assigned to Presence Applet no longer opens contact list
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: presence-applet (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-20 17:33 UTC by Kai Uwe Broulik
Modified: 2013-03-11 11:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2012-07-20 17:33:34 UTC
I have KTP Presence Applet assigned the shortcut Meta+J in its Plasma settings. When I press the keystroke, nothing happens. It used to open the contactlist.

Reproducible: Always

Steps to Reproduce:
1. Right click the Presence Applet and choose Configure This Presence Applet
2. Go to shortcut section
3. Choose a shortcut of your liking and apply
4. Press that shortcut
Actual Results:  
Nothing happens

Expected Results:  
KTP Contact List opens
Comment 1 David Edmundson 2012-07-20 17:49:44 UTC
Developer POV: The plasmoid "shortcut" is added by plasma to all applets, and all it does is activate the plasmoid. It's not meant to do anything else.

Designer POV: However, given this menu exists it makes perfect intuitive sense that it should be open the contact list, doing nothing is just stupid.

I'm not sure if plasma has a call for "this was just activated with a keyboard shortcut". I'm confirming this bug, but this is not easy by any means and may involve working with the plasma team.
Comment 2 Kai Uwe Broulik 2012-07-20 18:53:46 UTC
But clicking the plasmoid (activating it?) opens the contact list, so why shouldn’t the shortcut do the same? It used to work exactly this way until a few weeks ago.
Comment 3 Martin Klapetek 2012-07-20 21:17:57 UTC
Truth is that the plasmoid was slightly rewritten from "PopupApplet" to "Applet" (as we have no popup) and the activation function was changed from "activated" to "click", so that's why it stopped working. 

I also think it'd be nice to have this and I think we can simply add the activated() connection back again (it was proven that clicking does not initiate the "activated()" signal), I'm just not sure it's the "proper" solution.
Comment 4 David Edmundson 2013-03-11 11:46:17 UTC
Git commit f25bc4b7e304cb9635c7693a8d702d877ae7c06b by David Edmundson.
Committed on 11/03/2013 at 01:27.
Pushed by davidedmundson into branch 'master'.

Keyboard shortcut activated contact list

REVIEW: 109402

M  +1    -0    presence/src/presence-applet.cpp

http://commits.kde.org/telepathy-contact-applet/f25bc4b7e304cb9635c7693a8d702d877ae7c06b