Keyboard shortcut activated contact list

REVIEW: 109402
BUG: 303860